--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Git Testing</title>
   </head>
   <body>
-    <li>Thank korean people</li>
+    <li>Thank Indonesia people</li>
     Hello World!Indonesia
   </body>
 </html>
