--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Git Testing</title>
   </head>
   <body>
-    <li>Thank korean people</li>
+    <li>Save Myanmar</li>
   </body>
 </html>
