--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <li>Save Myanmar</li>
-    <li>Here is LOgin Branch</li>
+    <li>Here is login Branch</li>
   </body>
 </html>
