--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <title>Git Testing</title>
   </head>
   <body>
-    <li>Save Myanmar</li>
-    <li>Hi ,Login</li>
-    <li>Here is Master Branch</li>
-    <li>Here is Save Branch</li>
+    <li>Save Main</li>
+
 
   </body>
 </html>
